style/style.css
/* RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #e4f4fd;
    font-family: 'Plus Jakarta Sans', sans-serif;
    font-size: 16px;
}

/* LAYOUT */
#calculatorContainer {
    display: flex;
    width: 920px;
    min-height: 480px;
    border-radius: 24px;
    overflow: hidden;
    box-shadow: 0 32px 64px rgba(0, 0, 0.15);
}

#formContainer {
    background-color: #ffffff;
    padding: 40px;
    width: 50%;
}

#resultsContainer {
    background-color: #133041;
    padding: 40px;
    width: 50%;
    border-radius: 0 24px 24px 24px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* FORM HEADER */
#formHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 32px;
}

#formHeader h1 {
    font-size: 1.5rem;
    font-weight: 700;
    color: #133041;
}

#clearBtn {
    background: none;
    border: none;
    color: #6b7280;
    font-size: 0.875rem;
    cursor: pointer;
    text-decoration: underline;
    font-family: 'Plus Jakarta Sans', sans-serif;
}

#clearBtn:hover {
    color: red;
}

.hidden {
    display: none;
}

/* FORM GROUPS */
.formGroup {
    display: flex;
    flex-direction: column;
    margin-bottom: 16px;
}

.formGroup label {
    font-size: 0.875rem;
    font-weight: 500;
    color: #6b7280;
    margin-bottom: 8px;
}

/* INPUTS */
.inputWrapper {
    display: flex;
    border: 1px solid #ccc;
    border-radius: 6px;
    overflow: hidden;
    cursor: pointer;
}

.inputs:hover {
    border-color: #133041;
}

.inputWrapper:focus-within {
    border-color: #d4a017;
}

.inputWrapper input {
    flex: 1;
    padding: 12px 16px;
    border: none;
    outline: none;
    font-size: 1rem;
    font-weight: 700;
    color:#133041;
    font-family: 'Plus Jakarta Sans', sans-serif;
}

/*  */
.inputPrefix, .inputSuffix {
    background-color: #e4f4fd;
    padding: 12px 16px;
    font-size: 1rem;
    font-weight: 700;
    color: #6b7280;
}

/* FORM ROW */
.formRow {
    display: flex;
    gap: 16px;
}

.formRow .formGroup {
    flex: 1;
}

/* ERRORS */
.error-msg {
    display: none;
    color: #d9534f;
    font-size: 0.75rem;
    margin-top: 4px;
}

.error-msg.visible {
    display: block;
}

.inputWrapper.error {
    border-color: #d9534f;
}

.inputWrapper.error .inputPrefix, 
.inputWrapper.error .inputSuffix {
    background-color: #d9534f;
    color: #ffffff;
}

/* RADIO OPTIONS */
#typeOptions {
    display: flex;
    flex-direction: column;
    gap: 12px
}

.radioOption {
    display: flex;
    align-items: center;
    gap: 12px;
    border: 1px sold #ccc;
    border-radius: 6px;
    padding: 12px 16px;
    cursor: pointer;
    font-weight: 700;
    color: #133041;
    transition: border-color 0.2s, background-color 0.2s;
}

.radioOption:hover {
    border-color: #d4a017;
}

.radioOption input[type="radio"] {
    border: #d4a017;
    width: 18px;
    height: 18px;
    cursor: pointer;
}

.radioOption.selected {
    background-color: #faf5e4;
    border-color: #d4a017;
}

/* SUBMIT BTN */
#calculateBtn {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    width: 100%;
    padding: 16px;
    margin-top: 8px;
    background-color: #d4a017;
    color: #133041;
    border: none;
    border-radius: 999px;
    font-size: 1rem;
    font-weight: 700;
    font-family: 'Plus Jakarta Sans', sans-serif;
    cursor: pointer;
    transition: background-color 0.2s;
}

#calculateBtn:hover {
    background-color: #e8c547;
}

/* BEFORE SUBMISSION */
#resultsDefault {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 16px;
}

#resultsDefault img {
    width: 160px;
    margin-bottom: 8px;
}

#resultsDefault h2 {
    color:#ffffff;
    font-size: 1.25rem;
    font-weight: 700;
}

#resultsDefault p {
    color: #ffffff;
    font-size: 1.25rem;
    line-height: 1.6;
}

/* RESULT STATE */
#resultState {
    width: 100%
}

#resultsState h2 {
    color: #ffffff;
    font-size: 1.25rem;
    font-weight: 700;
    margin-bottom: 12px;
}

#resultsState p {
    color: #d9534f;
    font-size: 0.875rem;
    font-weight: 700;
    margin-bottom: 12px;
}

/* RESULTS CARD */
#resultsCard {
    background-color: #0d2331;
    border-radius: 8px;
    padding: 24px;
    border-top: 4px solid #d4a017;
}

.resultsRow {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.resultsRow {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.resultLabel {
    color: #d9534f;
    font-size: 0.875rem;
}

.resultAmount {
    color: #d4a017;
    font-size: 2.5rem;
    font-weight: 700;
    letter-spacing: -0.02rem;
}

.resultTotal {
    color: #ffffff;
    font-size: 1.25rem;
    font-weight: 700;
}

/* DIVIDER */
.divider {
    height: 1px;
    background-color: #2d4f5e;
    margin: 42px 0;
}

